--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ listing-6/output/
 listing-4/output/
 listing-5/output/
 listing-7/output/
+listing-8/non-xvfb-version/output/
+listing-8/xvfb-version/output/
