--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ listing-7/output/
 listing-8/non-xvfb-version/output/
 listing-8/xvfb-version/output/
 listing-8/.vagrant/
+listing-8/output/
+listing-10/.vagrant/
+listing-10/xvfb-version/output/
+listing-10/non-xvfb-version/output/
