Added a new code listing to demonstrate a reusable function to render a line chart under Node.js

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,6 @@ typings/
 listing-6/output/
 listing-4/output/
 listing-5/output/
-listing-7/output/
 listing-8/non-xvfb-version/output/
 listing-8/xvfb-version/output/
 listing-8/.vagrant/
@@ -68,3 +67,4 @@ listing-8/output/
 listing-10/.vagrant/
 listing-10/xvfb-version/output/
 listing-10/non-xvfb-version/output/
+*.png
