--- a/.gitignore
+++ b/.gitignore
@@ -57,14 +57,6 @@ typings/
 # dotenv environment variables file
 .env
 
-listing-6/output/
-listing-4/output/
-listing-5/output/
-listing-8/non-xvfb-version/output/
-listing-8/xvfb-version/output/
-listing-8/.vagrant/
-listing-8/output/
-listing-10/.vagrant/
-listing-10/xvfb-version/output/
-listing-10/non-xvfb-version/output/
+output/
+.vagrant/
 *.png
